split modify_breach component
allow you to have any combination of Breach being able to affect liches, demiliches and
rakshasas and Breach bouncing off Spell Trap/Deflection/Turning

--- a/stratagems/stratagems.ini
+++ b/stratagems/stratagems.ini
@@ -14,6 +14,7 @@ no_initial_change_mantle = 0
 no_initial_change_elemental_summoning = 0
 no_initial_change_harm = 0
 no_initial_change_modify_breach = 0
+no_initial_change_modify_lich_and_rakshasa = 0
 no_initial_change_web_and_the_large = 0
 no_initial_change_elemental_area_immunity = 0
 no_initial_change_fiend_summoning = 0
